Clean up commands

--- a/README
+++ b/README
@@ -8,6 +8,6 @@ Some examples of how to use the library in the Tutorial directory.
 ## Building
 There is a script (called sbt) in the root that loads the correct sbt version to build:
 
-1. ```./sbt update``` (takes 2 minutes or more)
-2. ```./sbt test```
-3. ```./sbt assembly``` (needed to make the jar used by the scald.rb script)
+1. ./sbt update (takes 2 minutes or more)
+2. ./sbt test
+3. ./sbt assembly (needed to make the jar used by the scald.rb script)
